# django-polls

./: LICENSE  pyproject.toml
django_polls.egg-info/: SOURCES.txt
django_polls/static/polls/: style.css
